--- a/index.html
+++ b/index.html
@@ -4,19 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower</title>
+    <link rel="stylesheet" href="styles/flower.css">
 </head>
-<body>
-    <header>
-        <div class="banner">
-            <div class="banner-content">
-                <h2 class="banner-title">Let's make beautiful flowers a part of your life.</h2>
-                <p class="banner-title-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-                <button class="banner-btn">Shop Now</button>
+<body> 
+    <header class="head">
+        <div class="container">
+            <div class="banner">
+                <div class="banner-content">
+                    <div class="banner-content-size">
+                        <h2 class="banner-title">Let's make beautiful flowers a part of your life.</h2>
+                        <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                        <button class="banner-btn">Shop Now</button>
+                    </div>
+                    
+                </div>
+                 <div class="banner-img">
+                    <img class="banner-picture" src="Flower Asset/pngwing 10.png" alt="picture of flower" >
+                 </div>
             </div>
-            <img src="Flower Asset/pngwing 10.png" alt="picture of flower" id="banner-img">
         </div>
-
     </header>
+    <!-- <section class="feature-flower">
+        <h2 class="section-title">Our Featured Flowers</h2>
+        <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+            <div class="flower">
+                <img src="Flower Asset/pngwing 6.png" alt="">
+                <img src="Flower Asset/pngwing 5.png" alt="">
+                <img src="Flower Asset/pngwing 7.png" alt="">
+            </div>
+
+        </p>
+    </section> -->
     
 </body>
 </html>
