--- a/index.html
+++ b/index.html
@@ -57,8 +57,23 @@
                         </div>
                         <p><u>Red Flower Tree</u></p>
                     </div>
-
             </div>
+        </section>
+
+        <section class="hot-deal-section">
+            <div class="hot-deal">
+                <div class="hot-deal-content">
+                    <div class="hot-width">
+                        <h3>Hot Deal ! Sale Up To 25% <span style="color: red;">Off</span></h3>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <button class="banner-btn">Sign Up</button>
+                    </div>
+                </div>
+                <div>
+                    <img src="Flower Asset/pngwing 8.png" alt="">
+                </div>
+            </div>
+
         </section>
     </main>
 
