--- a/index.html
+++ b/index.html
@@ -98,6 +98,18 @@
          </div>
             </div>
         </section>
+
+        <section>
+            <div class="input-info">
+           <div class="input-middle-info">
+            <h2>Get The Latest Deals</h2>
+            <p>$30 coupon for first shopping</p> 
+            <input class="input-field" type="text" placeholder="Enter your email">
+            <input class="banner-btn" type="submit" value="Submit">
+           </div>
+            </div>
+
+        </section>
     </main>
 
 
