--- a/index.html
+++ b/index.html
@@ -108,9 +108,16 @@
             <input class="banner-btn" type="submit" value="Submit">
            </div>
             </div>
-
         </section>
     </main>
+    <footer>
+        <div class="footer-content">
+            <h2><span style="color: red;">Flower</span>Shop</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p>&copy;2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
+
+    </footer>
 
 
 </body>
